--- a/weighted_QR.ipynb
+++ b/weighted_QR.ipynb
@@ -376,39 +376,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 2, 2])\n",
-      "torch.Size([2, 2])\n",
-      "R_alpha shape is torch.Size([2, 2, 1])\n",
-      "torch.Size([2, 4, 2])\n",
-      "torch.Size([2, 2, 1])\n",
+      "torch.Size([2, 3, 10])\n",
+      "torch.Size([2, 10])\n",
+      "R_alpha shape is torch.Size([2, 3, 1])\n",
+      "torch.Size([2, 4, 3])\n",
+      "torch.Size([2, 3, 1])\n",
       "Q^T W Q =\n",
-      "tensor([[[1., -0.],\n",
-      "         [-0., 1.]],\n",
+      "tensor([[[1., -0., 0.],\n",
+      "         [-0., 1., -0.],\n",
+      "         [0., -0., 1.]],\n",
       "\n",
-      "        [[1., 0.],\n",
-      "         [0., 1.]]])\n",
-      "torch.Size([2, 2, 1])\n",
+      "        [[1., 0., 0.],\n",
+      "         [0., 1., 0.],\n",
+      "         [0., 0., 1.]]])\n",
+      "torch.Size([2, 3, 1])\n",
       "Energy (weighted) per batch =  tensor([[2.0000],\n",
       "        [2.0000]])\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
+    "\n",
     "batch_size = 2\n",
     "\n",
     "# Create batched inputs\n",
-    "B_re = torch.rand((batch_size, 4, 2))\n",
-    "B_im = torch.rand((batch_size, 4, 2))\n",
+    "B_re = torch.rand((batch_size, 4, 10))\n",
+    "B_im = torch.rand((batch_size, 4, 10))\n",
     "B = B_re + 1j * B_im\n",
     "\n",
-    "un_alpha = torch.rand((batch_size, 2))\n",
+    "un_alpha = torch.rand((batch_size, 10))\n",
     "un_alpha = torch.complex(un_alpha, torch.zeros_like(un_alpha))\n",
     "\n",
     "W_vals = torch.tensor([2.0, 0.0, 3.0, 5.0])  # (batch_size, 4)\n",
@@ -416,7 +420,7 @@
     "mask = (W_vals > 0)  # (batch_size, 4)\n",
     "\n",
     "# Handle each batch independently since QR is not batched\n",
-    "Q = torch.zeros_like(B)  # (batch_size, 4, 3)\n",
+    "Q = torch.zeros(batch_size, B.shape[1], torch.sum(mask), dtype=B.dtype)  # (batch_size, 4, 3)\n",
     "\n",
     "B_sub = B[:,mask,:]          # (n_nonzero, 3)\n",
     "\n",
