--- a/harmonic_osc_plots_anon.ipynb
+++ b/harmonic_osc_plots_anon.ipynb
@@ -2,56 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in ./test_venv/lib/python3.11/site-packages (2.2.3)\n",
-      "Requirement already satisfied: matplotlib in ./test_venv/lib/python3.11/site-packages (3.10.1)\n",
-      "Requirement already satisfied: wandb in ./test_venv/lib/python3.11/site-packages (0.19.9)\n",
-      "Requirement already satisfied: numpy in ./test_venv/lib/python3.11/site-packages (2.2.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in ./test_venv/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in ./test_venv/lib/python3.11/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in ./test_venv/lib/python3.11/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (4.57.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (11.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in ./test_venv/lib/python3.11/site-packages (from matplotlib) (3.2.3)\n",
-      "Requirement already satisfied: click!=8.0.0,>=7.1 in ./test_venv/lib/python3.11/site-packages (from wandb) (8.1.8)\n",
-      "Requirement already satisfied: docker-pycreds>=0.4.0 in ./test_venv/lib/python3.11/site-packages (from wandb) (0.4.0)\n",
-      "Requirement already satisfied: gitpython!=3.1.29,>=1.0.0 in ./test_venv/lib/python3.11/site-packages (from wandb) (3.1.44)\n",
-      "Requirement already satisfied: platformdirs in ./test_venv/lib/python3.11/site-packages (from wandb) (4.3.7)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=5.28.0,<6,>=3.19.0 in ./test_venv/lib/python3.11/site-packages (from wandb) (5.29.4)\n",
-      "Requirement already satisfied: psutil>=5.0.0 in ./test_venv/lib/python3.11/site-packages (from wandb) (7.0.0)\n",
-      "Requirement already satisfied: pydantic<3 in ./test_venv/lib/python3.11/site-packages (from wandb) (2.11.3)\n",
-      "Requirement already satisfied: pyyaml in ./test_venv/lib/python3.11/site-packages (from wandb) (6.0.2)\n",
-      "Requirement already satisfied: requests<3,>=2.0.0 in ./test_venv/lib/python3.11/site-packages (from wandb) (2.32.3)\n",
-      "Requirement already satisfied: sentry-sdk>=2.0.0 in ./test_venv/lib/python3.11/site-packages (from wandb) (2.25.1)\n",
-      "Requirement already satisfied: setproctitle in ./test_venv/lib/python3.11/site-packages (from wandb) (1.3.5)\n",
-      "Requirement already satisfied: setuptools in ./test_venv/lib/python3.11/site-packages (from wandb) (65.5.0)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.4 in ./test_venv/lib/python3.11/site-packages (from wandb) (4.13.1)\n",
-      "Requirement already satisfied: six>=1.4.0 in ./test_venv/lib/python3.11/site-packages (from docker-pycreds>=0.4.0->wandb) (1.17.0)\n",
-      "Requirement already satisfied: gitdb<5,>=4.0.1 in ./test_venv/lib/python3.11/site-packages (from gitpython!=3.1.29,>=1.0.0->wandb) (4.0.12)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in ./test_venv/lib/python3.11/site-packages (from pydantic<3->wandb) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.33.1 in ./test_venv/lib/python3.11/site-packages (from pydantic<3->wandb) (2.33.1)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.0 in ./test_venv/lib/python3.11/site-packages (from pydantic<3->wandb) (0.4.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in ./test_venv/lib/python3.11/site-packages (from requests<3,>=2.0.0->wandb) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in ./test_venv/lib/python3.11/site-packages (from requests<3,>=2.0.0->wandb) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./test_venv/lib/python3.11/site-packages (from requests<3,>=2.0.0->wandb) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in ./test_venv/lib/python3.11/site-packages (from requests<3,>=2.0.0->wandb) (2025.1.31)\n",
-      "Requirement already satisfied: smmap<6,>=3.0.1 in ./test_venv/lib/python3.11/site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.29,>=1.0.0->wandb) (5.0.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install pandas matplotlib wandb numpy"
    ]
@@ -62,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_plots_dir = '/Users/moritzhauschulz/oxford_code/structure_preserving_operator_learning/paper_plots/harmonic_oscillator'\n"
+    "save_plots_dir = # add path here\n",
+    "wandb_user = # add wandb user here\n"
    ]
   },
   {
@@ -76,7 +30,7 @@
     "import wandb\n",
     "import pandas as pd\n",
     "\n",
-    "def wandb_viz_loss_with_std(exp_data,y_lim=None, figsize=(10, 6), make_legend=None, legend_font=14, starting_color=0, starting_style=0, color_by_loss_type = False, style_by_loss_type=True, plot_name=None, plot_std=True, loss_types=None, save_dir=None, exclude=None, wandb_user='moritz-hauschulz', \n",
+    "def wandb_viz_loss_with_std(exp_data,y_lim=None, figsize=(10, 6), make_legend=None, legend_font=14, starting_color=0, starting_style=0, color_by_loss_type = False, style_by_loss_type=True, plot_name=None, plot_std=True, loss_types=None, save_dir=None, exclude=None, wandb_user=wandb_user, \n",
     "                            wandb_project='structure-preserving-operator-learning', losses=None, vars=None, title=None, x_label=True, y_label=True):\n",
     "    \"\"\"\n",
     "    exp_data: list of tuples [(label, [exp_id1, exp_id2, ...]), ...] containing labels and their experiment IDs\n",
@@ -236,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wandb_final_loss_with_std(exp_data, train_loss=None, val_loss=None, test_loss=None, loss_types=None, save_dir=None, exclude=None, wandb_user='moritz-hauschulz', \n",
+    "def wandb_final_loss_with_std(exp_data, train_loss=None, val_loss=None, test_loss=None, loss_types=None, save_dir=None, exclude=None, wandb_user=wandb_user, \n",
     "                            wandb_project='structure-preserving-operator-learning', losses=None, vars=None):\n",
     "    \"\"\"\n",
     "    Prints a table of averaged final losses and their standard deviations for each loss type.\n",
@@ -348,7 +302,7 @@
     "    \n",
     "    # Read all CSV files for the given parameters\n",
     "    for exp_num in experiment_numbers:\n",
-    "        data_dir = f'/Users/moritzhauschulz/oxford_code/structure_preserving_operator_learning/methods/deeponet/experiments/{experiment_name}/exp_n_{exp_num}/plots'\n",
+    "        data_dir = f'/Users/XXXX/oxford_code/structure_preserving_operator_learning/methods/deeponet/experiments/{experiment_name}/exp_n_{exp_num}/plots'\n",
     "        csv_path = f'{data_dir}/data_q0={q0:.2f}_p0={p0:.2f}_omega={omega:.2f}_val.csv'\n",
     "        \n",
     "        try:\n",
@@ -467,18 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mmoritz-hauschulz\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "exp_data = [('Vanilla DeepONet',vanilla)]\n",
     "loss_types = {'mse_loss_train': 'training MSE', 'mse_loss_val': 'validation MSE'}\n",
