added wandb handling

--- a/harmonic_osc_plots_anon.ipynb
+++ b/harmonic_osc_plots_anon.ipynb
@@ -16,9 +16,7 @@
    "outputs": [],
    "source": [
     "save_plots_dir = # add path here\n",
-    "wandb_user = # add wandb user here\n",
-    "\n",
-    "\n"
+    "wandb_user = # add wandb user here"
    ]
   },
   {
